--- a/04-week/01-session/parcial 1/README
+++ b/04-week/01-session/parcial 1/README
@@ -1,4 +1,4 @@
-# Sistema de Biblioteca (Proyecto en Java)
+## Sistema de Biblioteca (Proyecto en Java)
 
 ## 📌 Descripción
 Este sistema permite administrar un catálogo de publicaciones, registrar rentas activas y llevar un historial de operaciones.  
